# finales_taller

./: .gitignore
2016-06-30/: CMakeLists.txt  Makefile  ejercicioDos.cpp  ejercicioNueve.cpp  ejercicioOcho.h  ejercicioSeis.cpp  ejercicioTres.cpp  ejercicioUno.c  ejercicioUno.txt  resuelto.md
2016-07-07/: ejercicioUno.h  resuelto.md
2019-12-17/: CMakeLists.txt  ejercicioDiez.cpp  ejercicioNueve.c  ejercicioUno.cpp  resuelto.md
2021-08-20/: ejercicioCuatro.h  ejercicioDiez.c  ejercicioDos.cpp  ejercicioNueve.c  ejercicioSiete.c  resuelto.md
2022-03-03/: CMakeLists.txt  claseAEleccion.h  desplazarContenido.c  ejercicioDeadLock.cpp  envioHastaFin.cpp  resuelto.md  romboAmarillo.cpp
